--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,11 @@ name = "bdaddr"
 version = "0.1.0"
 authors = ["yskszk63 <yskszk63@gmail.com>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+description = "Bluetooth Device Address."
+repository = "https://github.com/yskszk63/bdaddr"
+license = "MIT OR Apache-2.0"
+keywords = ["bluetooth"]
+category = ["data-structures"]
 
 [dependencies]
 thiserror = "1.0"
