--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,6 @@ aes = { version = "0.6", optional = true }
 [features]
 default = []
 matches = ["generic-array", "aes"]
+
+[package.metadata.docs.rs]
+all-features = true
