--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,7 +56,7 @@ jobs:
     strategy:
       matrix:
         include:
-        - version: 1.32 # macro_at_most_once_rep (needs cpufeatures)
+        - version: 1.36 # maybe_uninit (needs generic-array)
         - version: stable
         - version: nightly
     steps:
@@ -83,6 +83,7 @@ jobs:
         toolchain: nightly
         override: true
         profile: minimal
+        components: llvm-tools-preview
 
     - run: curl -LsSf https://github.com/taiki-e/cargo-llvm-cov/releases/latest/download/cargo-llvm-cov-x86_64-unknown-linux-gnu.tar.gz | tar xzf - -C ~/.cargo/bin
 
