--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,7 +56,7 @@ jobs:
     strategy:
       matrix:
         include:
-        - version: "1.51" # Cargo resolver feature
+        - version: "1.56" # 2021 edition
         - version: stable
         - version: nightly
     steps:
